<resources>
    <string name="app_name">Loop</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_error">Oops! looks like we are having internal problems. Please try again later.</string>
    <string name="no_internet_message">Internet connection appears to be offline. Please check your network settings.</string><!--common-->
    <string name="loading">Loading, please wait</string>
    <string name="title_location_permission">Please give location Permissions</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait…</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="permission_denied">Permission has been denied, you need to give permission to do the operation, press OK to open settings</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="login">Login</string>
    <string name="register_recyble_bin">Register your recycle bin</string>
    <string name="forget_your_password">Forget your password</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_email_for_code">Please enter email for resending the code</string>
    <string name="submit">Submit</string>
    <string name="backtologin">Back to login page</string>
    <string name="verification_email">Verification of Email</string>
    <string name="valid_email_enter">Please enter valid email</string>
    <string name="send_veri_code">Send verification code</string>
    <string name="already_join">Already joined? login here</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_code_here">Please enter code here</string>
    <string name="verfi_code_sent_to">Verification code has been sent to the Email below \n %1$s </string>
    <string name="check_trash">Please check email trash can\'t receive code</string>
    <string name="register_acc">Register account</string>
    <string name="enter_name">Please enter name</string>
    <string name="plz_enter_mail">Please enter email</string>
    <string name="plz_enter_password">Please enter password</string>
    <string name="plz_reenter_password">Please re-enter password</string>
    <string name="confirm">Confirm</string>
    <string name="new_pass">New Password</string>
    <string name="fp2">New code has been resent to the email below \n %1$s</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="plz_enter_codee">Please enter code</string>
    <string name="invalid_otp">Invalid otp</string>
    <string name="please_choose_your_recycle_bin">Please choose your recycle bin:</string>
    <string name="reminder_notification">Reminder Notification:</string>
    <string name="set_reminder"><![CDATA[Set reminder >]]></string>
    <string name="terms_and_conditions">Terms and conditions:</string>
    <string name="terms_and_conditions2">I have read and agree to the terms and conditions</string>
    <string name="set_reminder_notification">Set reminder notification</string>
    <string name="order_name">Name</string>
    <string name="or_number">Number</string>
    <string name="or_email_address">Email address</string>
    <string name="or_estate">Estate</string>
    <string name="or_building_name">Building Name</string>
    <string name="text_1">Paper-coated drink boxes, paper cups, paper plates</string>
    <string name="text_2">Glass, glass</string>
    <string name="text_3">Waste paper, carton, paper</string>
    <string name="text_4">Wheelchair, plastic carving card, plastic box</string>
    <string name="text_5">Plastic packaging bag, potato chip bag</string>
    <string name="text_6">Plastic foam foot, take-out box</string>
    <string name="text_7">Gourd, Sauve, Monthly</string>
    <string name="text_8">Clothing, hands, sheets</string>

    <string name="transition_string">hello</string>
    <string name="about_us">About US</string>
    <string name="tc">Terms and Condition</string>
    <string name="setting_alarm">Setting Alarm</string>
    <string name="contact_on_fb">Contact Us on FB Inbox</string>
    <string name="logout">Logout</string>
    <string name="understand_more">Understand more</string>
    <string name="about_loop_hk">The Loop Hong Kong</string>
    <string name="ab_address">Address Room: \n 62, 8th Floor, Jinkai Industrial Building, 58 Hung To Road, Kwun Tong</string>
    <string name="ab_business_hrs">Business: \n 10:00 AM - 6:00 PM</string>
    <string name="ab_email">Email: \n info@theloopshk.com</string>
    <string name="ab_company_team">The company\'s service team: \n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="term1">1. If the user presses to agree to the terms of reference, TheLoop recycle eners Dadu Fandom during business hours.</string>
    <string name="term2">2. If the user does not leave the recycle bin outside the door on the day of collection, the recycler will not be sent to the door for collection this wee.</string>
    <string name="term3">3. Learn to lower the monthly recycling costs and actual recycling costs for users. If you do not clear up the recycled materials and guidelines the recycler wil not recycle the items</string>
    <string name="term4">4. The Birmingham Recycling Obligation will be suspended and will be left for the end of the hoidya for a day of recycling. Please leave ana email reminder., FB and IF udpates</string>
    <string name="term5">5. The Birmingham Recycling Obligation will be suspended and will be left for the end of the hoidya for a day of recycling. Please leave ana email reminder., FB and IF udpates</string>
    <string name="term6">6. The Birmingham Recycling Obligation will be suspended and will be left for the end of the hoidya for a day of recycling. Please leave ana email reminder., FB and IF udpates</string>
    <string name="title_logout">Logout</string>
    <string name="desc_logout">Are you going to logout</string>

    <string name="fb_link">https://www.facebook.com/theLoopRecycle/</string>
    <string name="insta_link">https://www.instagram.com/theloopshongkong/</string>
    <string name="learn_about_recycling">Learn about recycling</string>
    <string name="select_payment_method">Please select payment method:</string>
    <string name="payment">Payment</string>
    <string name="save">Save</string>
    <string name="new_recycle_bin">New Recycle Bin</string>
    <string name="cancel">Cancel</string>
    <string name="hint_floor">Floor</string>
    <string name="plz_enter_name">Please enter name</string>
    <string name="plz_enter_number">Please enter number</string>
    <string name="plz_choose_estate">Please choose estate</string>
    <string name="plz_bld_name">Please enter building name</string>
    <string name="plz_floor">Please enter floor</string>
    <string name="hint_flat">Flat</string>
    <string name="plz_flat">Please enter flat</string>
    <string name="plz_accept_tm">Please accept term and condition</string>

    <string name="stripe_publishable_test_key">pk_test_KQ9c9XP0B1CpzlcVXXemOREp00kn7OtlAq</string>
    <string name="stripe_secret_test_key">sk_test_n5GYIGKRYi6UQkWoIRI7EqTU00ZwcG4OtI</string>
</resources>
