<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:background="@drawable/backgroud"
    android:layout_height="match_parent"
    tools:context="com.app.base.ui.login.LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_recyble_bin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_mail"
        android:paddingStart="@dimen/_8sdp"
        android:textColorHint="@color/colorGray"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_white_corner"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:background="@drawable/bg_white_corner"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_lock"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/_8sdp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textColorHint="@color/colorGray"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_white"
        android:textAllCaps="false"
        android:textColor="@color/teal_300"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPass" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_300"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forget_your_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/teal_300"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>
